<resources>
    <string name="name_app">FISC</string>
    <string name="app_name">Reacreditación</string>
    <string name="correo"> Correo electrónico</string>
    <string name="contrasena"> Contraseña</string>
    <string name="boton_login"> Iniciar</string>
    <string name="salir">Cerrar Sesión</string>
    <string name="acercade">Acerca de</string>
    <string name="seleccionar_fecha_inicial">Fecha inicial</string>
    <string name="seleccionar_fecha_final">Fecha de destino</string>
    <string name="et_input_nombre">Nombre</string>
    <string name="et_input_fecha">Fecha</string>
    <string name="et_input_tipo">Tipo</string>
    <string name="radio_estudiante">Estudiante</string>
    <string name="radio_profesor">Docente</string>
    <string name="btn_buscar">Buscar</string>
    <string name="btn_agregar">Agregar nueva actividad</string>

</resources>
