<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Busqueda">

    <!-- boton que llama  de forma manual  la pantalla agregar actividad -->

    <TextView
        android:id="@+id/tv_desde_fecha"
        android:layout_width="245dp"
        android:layout_height="49dp"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="84dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:textAlignment="center"
        android:hint="@string/seleccionar_fecha_inicial"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_hasta_fecha"
        android:layout_width="245dp"
        android:layout_height="49dp"
        android:layout_marginStart="101dp"
        android:layout_marginLeft="101dp"
        android:layout_marginTop="100dp"
        android:layout_marginEnd="112dp"
        android:layout_marginRight="112dp"
        android:layout_marginBottom="8dp"
        android:hint="@string/seleccionar_fecha_final"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_desde_fecha"
        app:layout_constraintVertical_bias="0.086" />

    <Button
        android:id="@+id/btn_buscar"
        android:layout_width="122dp"
        android:layout_height="49dp"
        android:layout_marginStart="132dp"
        android:layout_marginLeft="132dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="157dp"
        android:layout_marginRight="157dp"
        android:layout_marginBottom="292dp"
        android:text="@string/btn_buscar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_hasta_fecha"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/btn_agregar"
        android:layout_width="221dp"
        android:layout_height="44dp"
        android:layout_marginStart="133dp"
        android:layout_marginLeft="133dp"
        android:layout_marginTop="73dp"
        android:layout_marginEnd="150dp"
        android:layout_marginRight="150dp"
        android:layout_marginBottom="170dp"
        android:text="@string/btn_agregar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_buscar" />


</androidx.constraintlayout.widget.ConstraintLayout>